# unixcw

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  Makefile.inc.in  NEWS  README  README.dev.org  autogen.sh  configure  configure.ac  libtool  unixcw-3.6.0.lsm
debian/: control  copyright  libcw7-dev.install  libcw7.dirs  libcw7.install  rules
patches/2018_08_FreeBSD/: patch-src_libcw_libcw__oss.c
qa/: build_debian_packages.sh  qa.org  run_clang_tidy.sh  test_configure_flags.sh  tests.org  valgrind_libcw_test_public.sh  valgrind_libcw_tests.sh
src/: Makefile.in  config.h.in
src/cw/: Makefile.am  Makefile.in  cw.1  cw.c  cw.h  demo.cw  prelude.cw  test.cw
src/cwcp/: Makefile.am  Makefile.in  cwcp.1  cwcp.c
src/cwgen/: Makefile.am  Makefile.in  Makefile.port.in  call_new.sh  call_old.sh  cwgen.1  cwgen.c  word_freq.awk
src/cwutils/: Makefile.am  Makefile.in  cmdline.c  cmdline.h  cw_cmdline.c  cw_cmdline.h  cw_common.c  cw_common.h  cw_config.c  cw_config.h  cw_copyright.h  cw_rec_tester.c  cw_rec_tester.h  cw_rec_utils.c  cw_rec_utils.h  cw_words.h  dictionary.c  dictionary.h  i18n.c  i18n.h  memory.c  memory.h
src/libcw/: Doxyfile  Makefile.am  Makefile.in  clang_tidy.sh  cw.7  include.awk  libcw.3.m4  libcw.c  libcw.h  libcw.pc.in  libcw2.h  libcw_alsa.c  libcw_alsa.h  libcw_console.c  libcw_console.h  libcw_data.c  libcw_data.h  libcw_debug.c  libcw_debug.h  libcw_debug.py  libcw_gen.c  libcw_gen.h  libcw_gen_internal.h  libcw_key.c  libcw_key.h  libcw_null.c  libcw_null.h  libcw_oss.c  libcw_oss.h  libcw_pa.c  libcw_pa.h  libcw_rec.c  libcw_rec.h  libcw_rec_internal.h  libcw_signal.c  libcw_tq.c  libcw_tq.h  libcw_tq_internal.h  libcw_utils.c  libcw_utils.h  (+5 more)
src/libcw/tests/: Makefile.am  Makefile.in  README  clang_tidy.sh  count_functions_under_test.py  libcw_data_tests.c  libcw_data_tests.h  libcw_debug_tests.c  libcw_gen_tests.c  libcw_gen_tests.h  libcw_gen_tests_state_callback.c  libcw_gen_tests_state_callback.h  libcw_key_tests.c  libcw_key_tests.h  libcw_legacy_api_sets.c  libcw_legacy_api_sets.inc  libcw_legacy_api_tests.c  libcw_legacy_api_tests.h  libcw_legacy_api_tests_rec_poll.c  libcw_legacy_api_tests_rec_poll.h  libcw_rec_tests.c  libcw_test_all.sh  libcw_test_legacy_api.sh  libcw_test_quick.sh  libcw_test_tq_short_space.c  libcw_tq_tests.c  libcw_tq_tests.h  libcw_utils_tests.c  test_all_sets.c  test_data.c  test_framework.c  test_framework.h  test_framework_tools.c  test_framework_tools.h  test_main.c  test_sets.c
src/xcwcp/: Makefile.am  Makefile.in  application.cc  application.h  easy_rec.c  easy_rec.h  main.cc  modeset.cc  modeset.h  receiver.cc  receiver.h  sender.cc  sender.h  textarea.cc  xcwcp.1
